// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single hotels query returns partial error for known type but unknown hotel ID 1`] = `
Object {
  "data": Object {
    "hotel": null,
  },
  "errors": Array [
    [GraphQLError: Requested hotel does not exist.],
  ],
}
`;

exports[`single hotels query throws error for unknown ID type (ID mishmash) 1`] = `
Object {
  "data": Object {
    "hotel": null,
  },
  "errors": Array [
    [GraphQLError: Hotel ID mishmash. You cannot query hotels with ID 'aWRlbnRpdHk6MjQ4NTM5' because this ID is not ID of the hotel. Please use opaque ID of the hotel.],
  ],
}
`;

exports[`single hotels query works with single hotel ID 1`] = `
Object {
  "data": Object {
    "hotel": Object {
      "id": "aG90ZWw6MTkzMzI=",
    },
  },
}
`;

exports[`works with full example (containing circular references) 1`] = `
Object {
  "data": Object {
    "hotel": Object {
      "cityName": "Pero",
      "facilities": Object {
        "edges": Array [
          Object {
            "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
            "node": Object {
              "id": "aG90ZWxGYWNpbGl0eToz",
              "name": "Restaurant",
            },
          },
          Object {
            "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
            "node": Object {
              "id": "aG90ZWxGYWNpbGl0eTo1",
              "name": "Room service",
            },
          },
        ],
      },
      "id": "aG90ZWw6MTkzMzI=",
      "name": "Atahotel Expo Fiera",
      "photoUrl": "http://aff.bstatic.com/images/hotel/max500/588/58853664.jpg",
      "photos": Object {
        "edges": Array [
          Object {
            "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
            "node": Object {
              "highResUrl": "http://aff.bstatic.com/images/hotel/max500/588/58853664.jpg",
              "id": "aG90ZWxQaG90bzo1ODg1MzY2NA==",
              "lowResUrl": "http://aff.bstatic.com/images/hotel/max300/588/58853664.jpg",
            },
          },
        ],
      },
      "price": Object {
        "amount": null,
        "currency": "EUR",
      },
      "rating": Object {
        "categoryName": "First Class",
        "stars": 4,
      },
      "review": Object {
        "count": null,
        "description": null,
        "score": null,
      },
      "rooms": Object {
        "edges": Array [
          Object {
            "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
            "node": Object {
              "bedding": Array [
                Object {
                  "amount": 2,
                  "type": "Single bed(s)",
                },
                Object {
                  "amount": 1,
                  "type": "Large bed(s) (King size)",
                },
              ],
              "id": "aG90ZWxSb29tOjE5MzMyMDE=",
              "maxPersons": 2,
              "type": "Twin/Double",
            },
          },
          Object {
            "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
            "node": Object {
              "bedding": Array [
                Object {
                  "amount": 1,
                  "type": "Large bed(s) (King size)",
                },
              ],
              "id": "aG90ZWxSb29tOjE5MzMyMDM=",
              "maxPersons": 2,
              "type": "Double",
            },
          },
        ],
      },
      "whitelabelUrl": "https://www.booking.com/hotel/it/expo-fiera.html",
    },
  },
}
`;
